# FastApiMongo

./: database.py  main.py  pyproject.toml  requirements.txt
models/: models.py
routes/: task.py
