[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["d3lt409 <manuelfer1996@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.100.0"
uvicorn = "0.23.1"
motor = "3.2.0"
appdirs = "^1.4.4"
black = "^23.7.0"
flake8 = "^6.0.0"
typed-ast = "^1.5.5"
annotated-types = "0.5.0"
anyio = "3.7.1"
certifi = "2023.5.7"
click = "8.1.5"
colorama = "0.4.6"
dnspython = "2.4.0"
h11 = "0.14.0"
httpcore = "0.17.3"
idna = "3.4"
pydantic = "2.0.3"
pydantic-core = "2.3.0"
pymongo = "4.4.1"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
