[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["d3lt409 <manuelfer1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
motor = "^3.2.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
